--- a/htmlFiles/DB/socialjustice.css
+++ b/htmlFiles/DB/socialjustice.css
@@ -26,8 +26,10 @@ body{
 .searchdiv{
     margin-top:15em;
 }
+
 p{
     color: white;
+    margin: 0px;
 }
 .searchform{
     width:45em;
@@ -46,10 +48,8 @@ p{
     align-items: center;
     color: #9d9d9d;
 }
-.loginform p{
-    display: inline;
-    padding:1em;
-    color: #9d9d9d !important;
+.loginform input{
+    margin:1em;
 }
 .loginbtn{
     background: #222;
@@ -57,6 +57,12 @@ p{
 }
 .loginbtn:hover{
     color: white;
+}
+.logoutdiv{
+    height:50px;
+}
+.logoutdiv p{
+    color: #9d9d9d !important;
 }
 .addnewprofilediv{
     margin-top: 15em;
