--- a/htmlFiles/DB/socialjustice.css
+++ b/htmlFiles/DB/socialjustice.css
@@ -67,10 +67,20 @@ label{
     color: #9d9d9d !important;
 }
 .addnewprofilediv{
-    margin-top: 15em;
+    margin-top: 10em;
     justify-content: center;
     align-items: center;
     text-align: center;
+    display: flex;
+}
+.addnewprofileform{
+    background: #222;
+    border-radius: 0.3em;
+    width: 30%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .notloggedin{
     margin-top: 20em;
@@ -79,15 +89,18 @@ label{
     text-align: center;
 }
 .signupdiv{
-    margin: auto;
+    margin: 10em auto;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #222;
     height: 20em;
-    width: 20em;
+    width: 25%;
     border-radius:0.3em;
 }
 .signupdiv a{
+    color: white;
+}
+.addnewprofileform h4{
     color: white;
 }
